# helpdesk_internal_custom

./: .gitignore  README.md  pyproject.toml
docs/: API.md  ARCHITECTURE.md  BLOCKERS.md  DECISIONS.md  DEPLOYMENT.md  DISCOVERY.md  MAINTENANCE.md  NEXT_STEPS.md  PERMISSIONS.md  PROGRESS_LOG.md  SESSION_STATE.md  SETUP.md  TESTING.md
helpdesk_internal_custom/: discovery.py  hooks.py  install.py  modules.txt  permissions.py  security_tests.py  setup_custom_fields.py  setup_master_data.py  test_setup.py
helpdesk_internal_custom/api/: ticket.py
helpdesk_internal_custom/fixtures/: custom_field.json  role.json
helpdesk_internal_custom/overrides/: ticket.py
